# nlp-webinar

./: .gitignore  README.md  presentation.css  presentation.ipynb  pyproject.toml  tf-idf-article.ipynb
data/: negative-words.txt
src/: data_loaders.py  nn_based.py  rule_based.py  stats_based.py  utils.py
